@@ -1311,8 +1311,12 @@ static void parseEntityDeclList (tokenInfo *const token)
 {
     if (isType (token, TOKEN_PERCENT))
 	skipToNextStatement (token);
-    else while (isType (token, TOKEN_IDENTIFIER))
+    else while (isType (token, TOKEN_IDENTIFIER) ||
+		isType (token, TOKEN_KEYWORD))
     {
+	/* compilers accept keywoeds as identifiers */
+	if (isType (token, TOKEN_KEYWORD))
+	    token->type = TOKEN_IDENTIFIER;
 	parseEntityDecl (token);
 	if (isType (token, TOKEN_COMMA))
 	    readToken (token);
